--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   riverpod_annotation: ^3.0.3
   sqlite3_flutter_libs: ^0.5.40
   uuid: ^4.5.2
+  math_expressions: ^2.6.0
+  csv: ^6.0.0
+  file_picker: ^8.0.0
+  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
