--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path_provider: ^2.1.5
   riverpod_annotation: ^3.0.3
   share_plus: ^10.0.0
+  shared_preferences: ^2.5.4
   sqlite3_flutter_libs: ^0.5.40
   uuid: ^4.5.2
 
